Revise README for v1.3.0 release
Updated README for version 1.3.0 with new features and optimizations.